test/cli/test-mutate/mutate-existing-fail/mutated-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    otherlabel: bar
  name: secret-1
  namespace: staging
